--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -6,14 +6,16 @@ $color-primary: #87509c;
 $color-secondary: #101d2c;
 
 $color-heading-primary: #f7f3ea;
+$color-nav-list-bg: #d74680;
 
 $color-light-1: #ffffff;
 $color-grey-light-2: #aaa;
 
-$color-grey-dark-1: #54483A;
+$color-dark-1: black;
 $color-grey-dark-2: #6D5D4B;
 
 $header-bg-color: #87509c;
+$services-bg-color: #17c2a4;
 
 $color-btn-primary: #eb7d4b;
 /* .COLOR VARIABLES */
