--- a/src/scss/components/_list.scss
+++ b/src/scss/components/_list.scss
@@ -6,15 +6,22 @@
 	font-weight: 400;
 	line-height: 1.8rem;
 	text-transform: uppercase;
+	transition: all .5s cubic-bezier(.26,.18,.54,1.26);
 	
 	@media only screen and(max-width: $bp-medium) {
-	    margin-top: 2rem;
-	}
-	@media only screen and(max-width: $bp-small) {
+		position: fixed;
+		width: 100vw;
+		height: 100vh;
+		top: 0;
+		left: -110%;
+	    margin-top: 0;
 	    flex-direction: column;
 	    justify-content: center;
 	    align-items: center;
+		background: $color-nav-list-bg;
+		z-index: 10;
 	}
+	
 	/* .list__item */
 
 	&__item {
@@ -26,6 +33,7 @@
 			margin-right: 1.5rem;
 			@media only screen and(max-width: $bp-medium) {
 			    margin-right: .5rem;
+			    padding: 2rem 3rem;
 			}
 		}
 		/* .list__item_act */
@@ -37,11 +45,17 @@
 		&:hover{
 			background: #744489;
 		}
+		@media only screen and(max-width: $bp-medium) {
+			margin: 0.5rem 0 .5rem 0;
+			font-size: 2rem;
+		}
+		
 	}
 
 	/* .list__link */
 
 	&__link {
 		color: inherit;
+
 	}
 }
