--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,8 +14,10 @@
 @import "components/buttons";
 @import "components/nav";
 @import "components/list";
+@import "components/cards";
 
 @import "layout/header";
+@import "layout/services";
 @import "layout/footer";
 
 
